tests/ui/unsupported_unary_op.pea
fn main() {
    println!(!b"abc");
}
